# balboa_public

./: .gitignore  .gitmodules  CMakeLists.txt  Donut.blend  Donut.blend1  Donut1.blend1  LICENSE  README.md  README2.md  TODO.txt  cube.blend1  ieng6ID.txt  not_donut.blend
handouts/: Makefile  final.tex  homework1.tex  homework2.tex  homework3.tex  homework4.tex  homework5.tex  preamble.tex
hw1/scenes/hw1/: cat.json  piggy.json  robot.json  three_circles.json  three_shapes_2.json  x.json
hw1/scenes/hw2/: cube.json  prism.json  prism.ply  teapot.json  tetrahedron.json  two_shapes.json
hw1/scenes/hw3/: bunny.ply  cube.json  sphere.ply  spheres.json  two_shapes.json
hw1/src/: hw1.cpp  hw1.h  hw2_scenes.cpp  hw3.cpp  hw3.h  hw3_scenes.h  image.cpp  vector.h
hw3/: README.md
hw3/src/: hw1.cpp  hw1.h  hw1_scenes.cpp  hw2.cpp  hw2.h  hw2_scenes.cpp  hw2_scenes.h  hw3.cpp  hw3.h  hw3_3_vert(bk).vs  hw3_scenes.cpp  image.h  main.cpp  shaderClass.h  timer.h  vector.h
scenes/hw1/: alpha.json  alpha_2.json  alpha_circles.json  alpha_triangles.json  antialiasing.json  cat.json  five_shapes.json  four_circles.json  four_shapes.json  piggy.json  robot.json  sun.json  three_shapes.json  transformation.json  transformation_2.json
scenes/hw2/: cube.json  cube.ply  school.json  teapot.json  teapot.ply  teapot_decimated.ply  tetrahedron.json  tetrahedron.ply  two_shapes.json  two_triangles.json
scenes/hw3/: 1cube.ply  blitz.json  blitz.ply  buddha.json  buddha.ply  bunny.json  bunny.ply  cube.json  donut.json  myScene.json  spheres.json  t.json  teapot.json  teapot.ply  two_shapes.json
src/: balboa.h  hw1.cpp  hw1.h  hw1_scenes.cpp  hw1_scenes.h  hw2.cpp  hw2.h  hw2_scenes.cpp  hw2_scenes.h  hw3.cpp  hw3.h  hw3_3_frag(bk).fs  hw3_scenes.cpp  hw3_scenes.h  image.h  main.cpp  matrix.h  vector.h
